# goal_execution

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_ge_org.py  002_ge_bootstrap.py  003_ge_execution.py  004_ge_sub_objective.py  005_ge_task_canvas_order.py  006_drop_draft_lifecycle.py  007_canvas_v2.py  008_phase_gate_item_schedule.py  009_project_note.py  010_system_tasks.py  011_gate_includes_phase_sync.py  012_end_sign_route.py  013_org_dept_parent.py  014_ge_deviations.py  015_drop_ge_execution_notifications.py  016_m23_clear_task_legacy_status.py  017_org_memberships.py  018_org_charter_notes.py  019_org_sort_order.py  020_ge_strategic_fields.py  021_default_chain_migrate.py  022_ge_sort_order.py  023_remove_default_chain.py  024_project_members.py
app/: auth.py  config.py  constants.py  db.py  deps.py  main.py  routes_ge.py  routes_ge_internal.py  routes_org.py
app/models/: __init__.py  ge.py  org.py
app/schemas/: __init__.py  org.py
app/services/: ge_access.py  ge_accountability.py  ge_bootstrap.py  ge_default_chain_migrate.py  ge_deviations.py  (+30 more)
openapi/: ge-v1.yaml
scripts/: backfill_project_members.py  backfill_strategic_fields.py  backfill_system_tasks.py  dev-goal-execution.sh  ge-smoke.sh  migrate_default_chain.py
tests/: conftest.py  test_health.py  test_org_charter.py  test_org_delete.py  test_org_departments.py  test_org_memberships.py  test_org_nested.py  test_org_profile_access.py  test_org_role_membership.py  test_org_service_write.py  test_org_sort_order.py
(+43 files in other folders)
